# AVClip

./: README.md  build.gradle  settings.gradle
AVSdk/: build.gradle
AVSdk/src/main/: AndroidManifest.xml
AVSdk/src/main/java/com/alick/avsdk/: AbsAudioClipUtils.kt  AudioClipUtils.kt  AudioClipUtils4Callback.kt  AudioClipUtils4Sync.kt  MediaParser.kt
MediaSelectLibrary/: build.gradle
MediaSelectLibrary/src/main/: AndroidManifest.xml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/alick/avclip/: AudioClipActivity.kt  AudioSpliceActivity.kt  BaseApplication.kt  BaseAudioInfo.kt  MainActivity.kt
app/src/main/res/drawable/: play_selector.xml  ps_image_placeholder.xml
app/src/main/res/layout/: activity_audio_clip.xml  activity_audio_mix.xml  activity_audio_splice.xml  activity_edit.xml  activity_extract_audio.xml  activity_extract_pcm.xml  activity_home.xml  activity_main.xml  activity_video_add_bgm.xml  activity_video_clip.xml  bottom_options.xml  layout_base_audio_info.xml
app/src/main/res/values/: attrs.xml  colors.xml  colors2.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
commonLibrary/: build.gradle
commonLibrary/src/main/: AndroidManifest.xml
commonLibrary/src/main/java/com/alick/commonlibrary/: BaseActivity.kt  Uri2File.kt  UriTools.java  UriUtils.java
ffmpegLibrary/: build.gradle
ffmpegLibrary/src/main/: AndroidManifest.xml
ffmpegLibrary/src/main/cpp/: CMakeLists.txt  CxwLog.cpp  ffmpeglibrary.cpp
ffmpegLibrary/src/main/java/com/alick/ffmpeglibrary/: FFmpegUtils.kt
gradle/wrapper/: gradle-wrapper.properties
key/: alick.jks
lameLibrary/: build.gradle
lameLibrary/src/main/: AndroidManifest.xml
lameLibrary/src/main/cpp/: CMakeLists.txt  CxwLog.h  Mp3Encoder.cpp  Mp3Encoder.h  lamelibrary.cpp
lameLibrary/src/main/cpp/lame/: fft.c  set_get.c  set_get.h
lameLibrary/src/main/java/com/alick/lamelibrary/: LameUtils.kt
utilsLibrary/: build.gradle
utilsLibrary/src/main/: AndroidManifest.xml
utilsLibrary/src/main/java/com/alick/utilslibrary/: AppHolder.java  BLog.java  BLog.kt  EditTextUtils.java  FileUtils.java  PcmToWavUtil.java  SimpleTextWatcherAdapter.java  StorageUtils.kt  T.kt  ThreadPoolManager.kt  TimeFormatUtils.kt  TimeUtils.java  WeakHandler.java  mainHandler.kt
(+40 files in other folders)
